# Python-for-datascience

./: .gitignore  README.md
Python-0-Starting/ex00/:  Hello.py
Python-0-Starting/ex01/: format_ft_time.py
Python-0-Starting/ex02/: find_ft_type.py
Python-0-Starting/ex03/: NULL_not_found.py  test.py
Python-0-Starting/ex04/: whatis.py
Python-0-Starting/ex05/: building.py
Python-0-Starting/ex06/: ft_filter.py
Python-0-Starting/ex09/: LICENSE  README.md  setup.py
Python-0-Starting/ex09/ft_package/: __init__.py  count_in_list.py
Python-1-Array/ex00/: give_bmi.py
Python-1-Array/ex01/: array2D.py
Python-1-Array/ex02/: load_image.py
Python-1-Array/ex03/: load_image.py  zoom.py
Python-1-Array/ex04/: load_image.py  rotate.py
Python-1-Array/ex05/: pimp_image.py
ex01/: format_ft_time.py
ex03/: test.py
ex04/: whatis.py
ex05/: building.py
ex06/: filterstring.py
ex07/: sos.py
ex08/: Loading.py
ex09/: pyproject.toml  test.py
ex09/ft_package.egg-info/: PKG-INFO  SOURCES.txt
